--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "teach",
   "version": "1.0.0",
   "description": "Landing page about teaching web development for free",
-  "main": "index.html",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html src/**/*.html --dist-dir docs"
   },
   "author": "jaime.cervantes.ve@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "parcel": "^2.5.0"
   }
 }
