--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Landing page about teaching web development for free",
   "type": "module",
   "scripts": {
-    "start": "parcel src/**/*.html",
+    "start": "parcel src/index.html",
     "build": "parcel build src/*.html src/**/*.html --no-source-maps --public-url /teach/ --dist-dir docs"
   },
   "author": "jaime.cervantes.ve@gmail.com",
