build: update parcel and scripts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Landing page about teaching web development for free",
   "type": "module",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/*.html src/**/*.html --no-source-maps --public-url /teach/ --dist-dir docs"
+    "dev": "parcel src/**/index.html",
+    "build": "parcel build src/**/*.html --no-source-maps --public-url /teach/ --dist-dir docs"
   },
   "author": "jaime.cervantes.ve@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.18.0",
-    "parcel": "^2.5.0"
+    "parcel": "^2.9.3"
   }
 }
